<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_layout"
    tools:context=".LogOut.LogOutFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/app_font"
        android:padding="16dp"
        android:text="@string/Are_you"
        android:textColor="@color/colorAccent"
android:layout_marginTop="150dp"
        android:textSize="40sp" />

    <Button
        android:id="@+id/LOGOUTButn"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_marginLeft="224dp"
        android:layout_marginTop="300dp"

        android:fontFamily="@font/app_font"

        android:background="@drawable/edittextshpae"
        android:text="@string/LOGOUT"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />


    <Button
        android:id="@+id/NOLOGOUTButn"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_marginLeft="24dp"
        android:layout_marginTop="300dp"

        android:background="@drawable/edittextshpae"

        android:fontFamily="@font/app_font"
        android:text="@string/nOLOGOUT"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />
</FrameLayout>